--- a/sample/secret.yaml
+++ b/sample/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  hello: d29ybGQ=
+  hello: <secret:secret/data/test/demo~hello|base64>
 kind: Secret
 metadata:
   creationTimestamp: null
-  name: my-secret
+  name: my-secret 
