--- a/sample/secret.yaml
+++ b/sample/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  hello: <secret:secret/data/test/demo~hello|base64>
+  hello: <secret:secret/data/test/demo~hello>
 kind: Secret
 metadata:
   creationTimestamp: null
