--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -1,3 +1,4 @@
 favorite:
   drink: coffee
-  food: <secret:secret/data/test/demo~hello>
+# food: <secret:secret/data/test/demo~hello>
+  food: pizza
