--- a/subchart/values.yaml
+++ b/subchart/values.yaml
@@ -1,4 +1,3 @@
 favorite:
   drink: coffee
-# food: <secret:secret/data/test/demo~hello>
-  food: burger
+  food: <secret:secret/data/test/demo~hello>
