--- a/subchart/Chart.yaml
+++ b/subchart/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-name: mychart-subchart
+name: hello-world
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
 dependencies:
 - name: mychart
   version: 0.1.0
-  repository: "file://./mychart"
+  repository: "file://../charts/mychart"
