--- a/sample/secret.yaml
+++ b/sample/secret.yaml
@@ -1,7 +1,7 @@
+# The below will look in Vault for /path/to/your/secret and will return the key 'secretkey'.
 apiVersion: v1
-data:
-  hello: <secret:secret/data/test/demo~hello>
-kind: Secret
+kind: ConfigMap
 metadata:
-  creationTimestamp: null
-  name: argocd-vault-replacer-example-configmap 
+  name: argocd-vault-replacer-example-configmap
+data:
+  sample-secret: <secret:secret/data/test/demo~hello>
